se terminn los estilos

--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,10 @@ a {
     align-items: flex-start;
 }
 
+.slideButton {
+    
+}
+
 .content__clain {
     font-size: 64px;
     color: var(--accent-color);
